--- a/champsim_config.json
+++ b/champsim_config.json
@@ -155,7 +155,7 @@
         "virtual_prefetch": false,
         "prefetch_activate": "LOAD,PREFETCH",
         "prefetcher": "no",
-        "replacement": "lru"
+        "replacement": "myreplacement"
     },
 
     "physical_memory": {
